src/main/java/generated/iptables_grammar/IptablesParser.java
// Generated from Iptables.g4 by ANTLR 4.3

package generated.iptables_grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IptablesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__97=1, T__96=2, T__95=3, T__94=4, T__93=5, T__92=6, T__91=7, T__90=8, 
		T__89=9, T__88=10, T__87=11, T__86=12, T__85=13, T__84=14, T__83=15, T__82=16, 
		T__81=17, T__80=18, T__79=19, T__78=20, T__77=21, T__76=22, T__75=23, 
		T__74=24, T__73=25, T__72=26, T__71=27, T__70=28, T__69=29, T__68=30, 
		T__67=31, T__66=32, T__65=33, T__64=34, T__63=35, T__62=36, T__61=37, 
		T__60=38, T__59=39, T__58=40, T__57=41, T__56=42, T__55=43, T__54=44, 
		T__53=45, T__52=46, T__51=47, T__50=48, T__49=49, T__48=50, T__47=51, 
		T__46=52, T__45=53, T__44=54, T__43=55, T__42=56, T__41=57, T__40=58, 
		T__39=59, T__38=60, T__37=61, T__36=62, T__35=63, T__34=64, T__33=65, 
		T__32=66, T__31=67, T__30=68, T__29=69, T__28=70, T__27=71, T__26=72, 
		T__25=73, T__24=74, T__23=75, T__22=76, T__21=77, T__20=78, T__19=79, 
		T__18=80, T__17=81, T__16=82, T__15=83, T__14=84, T__13=85, T__12=86, 
		T__11=87, T__10=88, T__9=89, T__8=90, T__7=91, T__6=92, T__5=93, T__4=94, 
		T__3=95, T__2=96, T__1=97, T__0=98, MATCH=99, IP_MASK=100, IP=101, INT=102, 
		NAME=103, WS=104, NL=105, STRING=106, HEX_DIGIT=107;
	public static final String[] tokenNames = {
		"<INVALID>", "'assured'", "'set'", "'secmark'", "'--ctmask'", "'-f'", 
		"'ACCEPT'", "'--sport'", "'--mark'", "'-N'", "'-o'", "'--timeout'", "'--nfmask'", 
		"'--add-set'", "'CHECKSUM'", "'related'", "','", "'MARK'", "'--reject-with'", 
		"'CONFIRMED'", "'NONE'", "'--dport'", "'--icmpv6-type'", "'--source'", 
		"'-4'", "'--physdev-is-bridged'", "'--in-interface'", "'-d'", "'EXPECTED'", 
		"'--physdev-out'", "'REDIRECT'", "'--restore-mark'", "'DNAT'", "'RELATED'", 
		"'ASSURED'", "'REJECT'", "'physdev'", "'--match-set'", "'destroy'", "'-c'", 
		"':'", "'--ctstate'", "'!'", "'NOTRACK'", "'mark'", "'--notrack'", "'SET'", 
		"'-A'", "'state'", "'--physdev-in'", "'--to-ports'", "'--exist'", "'new'", 
		"'ESTABLISHED'", "'protoinfo'", "'icmp6'", "'udp'", "'-j'", "'--comment'", 
		"'-s'", "'helper'", "'--set-counters'", "'RETURN'", "'--to-destination'", 
		"'CT'", "'tcp'", "'-i'", "'--checksum-fill'", "'--fragment'", "'--mac-source'", 
		"'comment'", "'--set-xmark'", "'icmp'", "'/'", "'reply'", "'--out-interface'", 
		"'--state'", "'CONNMARK'", "'conntrack'", "'--zone'", "'-P'", "'UNTRACKED'", 
		"'natseqinfo'", "'DROP'", "'connmark'", "'--icmp-type'", "'--protocol'", 
		"'INVALID'", "'--save-mark'", "'--destination'", "'SNAT'", "'-p'", "'--to-source'", 
		"'mac'", "'-6'", "'NEW'", "'SEEN_REPLY'", "'--del-set'", "'-'", "'-m'", 
		"IP_MASK", "IP", "INT", "NAME", "WS", "NL", "STRING", "HEX_DIGIT"
	};
	public static final int
		RULE_table = 0, RULE_rle = 1, RULE_chain = 2, RULE_policy = 3, RULE_target = 4, 
		RULE_targetName = 5, RULE_jumpyTarget = 6, RULE_acceptTarget = 7, RULE_dropTarget = 8, 
		RULE_returnTarget = 9, RULE_checksumTarget = 10, RULE_checksumTargetOpts = 11, 
		RULE_connmarkTarget = 12, RULE_connmarkTargetOpts = 13, RULE_maskingOption = 14, 
		RULE_nfCtMask = 15, RULE_ctTarget = 16, RULE_ctTargetOpts = 17, RULE_ctZone = 18, 
		RULE_ctNotrack = 19, RULE_event = 20, RULE_dnatTarget = 21, RULE_dnatTargetOpts = 22, 
		RULE_markTarget = 23, RULE_markTargetOpts = 24, RULE_notrackTarget = 25, 
		RULE_redirectTarget = 26, RULE_rejectTarget = 27, RULE_rejectTargetOpts = 28, 
		RULE_setTarget = 29, RULE_setTargetOpts = 30, RULE_snatTarget = 31, RULE_snatTargetOpts = 32, 
		RULE_chainname = 33, RULE_match = 34, RULE_ipv4 = 35, RULE_ipv6 = 36, 
		RULE_frgm = 37, RULE_ctrs = 38, RULE_iniface = 39, RULE_outiface = 40, 
		RULE_module = 41, RULE_connmarkopts = 42, RULE_conntrackopts = 43, RULE_conntrackvars = 44, 
		RULE_address = 45, RULE_mask = 46, RULE_statuslist = 47, RULE_statelist = 48, 
		RULE_markopts = 49, RULE_commentopts = 50, RULE_icmp6opts = 51, RULE_macopts = 52, 
		RULE_macaddress = 53, RULE_physdevopts = 54, RULE_physdevvars = 55, RULE_setopts = 56, 
		RULE_setvars = 57, RULE_flagset = 58, RULE_flag = 59, RULE_status = 60, 
		RULE_state = 61, RULE_stateopts = 62, RULE_udpopts = 63, RULE_icmpopts = 64, 
		RULE_icmptype = 65, RULE_tcpopts = 66, RULE_dport = 67, RULE_sport = 68, 
		RULE_portno = 69, RULE_protocol = 70, RULE_sourceaddr = 71, RULE_addressExpression = 72, 
		RULE_dstaddr = 73;
	public static final String[] ruleNames = {
		"table", "rle", "chain", "policy", "target", "targetName", "jumpyTarget", 
		"acceptTarget", "dropTarget", "returnTarget", "checksumTarget", "checksumTargetOpts", 
		"connmarkTarget", "connmarkTargetOpts", "maskingOption", "nfCtMask", "ctTarget", 
		"ctTargetOpts", "ctZone", "ctNotrack", "event", "dnatTarget", "dnatTargetOpts", 
		"markTarget", "markTargetOpts", "notrackTarget", "redirectTarget", "rejectTarget", 
		"rejectTargetOpts", "setTarget", "setTargetOpts", "snatTarget", "snatTargetOpts", 
		"chainname", "match", "ipv4", "ipv6", "frgm", "ctrs", "iniface", "outiface", 
		"module", "connmarkopts", "conntrackopts", "conntrackvars", "address", 
		"mask", "statuslist", "statelist", "markopts", "commentopts", "icmp6opts", 
		"macopts", "macaddress", "physdevopts", "physdevvars", "setopts", "setvars", 
		"flagset", "flag", "status", "state", "stateopts", "udpopts", "icmpopts", 
		"icmptype", "tcpopts", "dport", "sport", "portno", "protocol", "sourceaddr", 
		"addressExpression", "dstaddr"
	};

	@Override
	public String getGrammarFileName() { return "Iptables.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IptablesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TableContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(IptablesParser.NL); }
		public RleContext rle(int i) {
			return getRuleContext(RleContext.class,i);
		}
		public List<RleContext> rle() {
			return getRuleContexts(RleContext.class);
		}
		public List<ChainContext> chain() {
			return getRuleContexts(ChainContext.class);
		}
		public ChainContext chain(int i) {
			return getRuleContext(ChainContext.class,i);
		}
		public PolicyContext policy(int i) {
			return getRuleContext(PolicyContext.class,i);
		}
		public TerminalNode NL(int i) {
			return getToken(IptablesParser.NL, i);
		}
		public List<PolicyContext> policy() {
			return getRuleContexts(PolicyContext.class);
		}
		public TableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).enterTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).exitTable(this);
		}
	}

	public final TableContext table() throws RecognitionException {
		TableContext _localctx = new TableContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_table);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__89 || _la==T__51 || _la==T__18 || _la==NL) {
				{
				setState(152);
				switch (_input.LA(1)) {
				case T__51:
					{
					setState(148); rle();
					}
					break;
				case T__89:
					{
					setState(149); chain();
					}
					break;
				case T__18:
					{
					setState(150); policy();
					}
					break;
				case NL:
					{
					setState(151); match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RleContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(IptablesParser.NL, 0); }
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public ChainnameContext chainname() {
			return getRuleContext(ChainnameContext.class,0);
		}
		public List<MatchContext> match() {
			return getRuleContexts(MatchContext.class);
		}
		public MatchContext match(int i) {
			return getRuleContext(MatchContext.class,i);
		}
		public RleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).enterRle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).exitRle(this);
		}
	}

	public final RleContext rle() throws RecognitionException {
		RleContext _localctx = new RleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_rle);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157); match(T__51);
			setState(158); chainname();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__93) | (1L << T__88) | (1L << T__75) | (1L << T__74) | (1L << T__72) | (1L << T__71) | (1L << T__59) | (1L << T__56) | (1L << T__39) | (1L << T__37))) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & ((1L << (T__32 - 66)) | (1L << (T__30 - 66)) | (1L << (T__23 - 66)) | (1L << (T__12 - 66)) | (1L << (T__9 - 66)) | (1L << (T__7 - 66)) | (1L << (T__4 - 66)) | (1L << (MATCH - 66)))) != 0)) {
				{
				{
				setState(159); match();
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(165); target();
			setState(166); match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChainContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(IptablesParser.NL, 0); }
		public ChainnameContext chainname() {
			return getRuleContext(ChainnameContext.class,0);
		}
		public ChainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).enterChain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).exitChain(this);
		}
	}

	public final ChainContext chain() throws RecognitionException {
		ChainContext _localctx = new ChainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_chain);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168); match(T__89);
			setState(169); chainname();
			setState(170); match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PolicyContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(IptablesParser.NL, 0); }
		public TargetNameContext targetName() {
			return getRuleContext(TargetNameContext.class,0);
		}
		public ChainnameContext chainname() {
			return getRuleContext(ChainnameContext.class,0);
		}
		public PolicyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_policy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).enterPolicy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).exitPolicy(this);
		}
	}

	public final PolicyContext policy() throws RecognitionException {
		PolicyContext _localctx = new PolicyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_policy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172); match(T__18);
			setState(173); chainname();
			setState(174); targetName();
			setState(175); match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TargetContext extends ParserRuleContext {
		public TargetNameContext targetName() {
			return getRuleContext(TargetNameContext.class,0);
		}
		public TargetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_target; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).enterTarget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).exitTarget(this);
		}
	}

	public final TargetContext target() throws RecognitionException {
		TargetContext _localctx = new TargetContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_target);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177); match(T__41);
			setState(178); targetName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TargetNameContext extends ParserRuleContext {
		public SnatTargetContext snatTarget() {
			return getRuleContext(SnatTargetContext.class,0);
		}
		public RejectTargetContext rejectTarget() {
			return getRuleContext(RejectTargetContext.class,0);
		}
		public ChecksumTargetContext checksumTarget() {
			return getRuleContext(ChecksumTargetContext.class,0);
		}
		public ConnmarkTargetContext connmarkTarget() {
			return getRuleContext(ConnmarkTargetContext.class,0);
		}
		public DropTargetContext dropTarget() {
			return getRuleContext(DropTargetContext.class,0);
		}
		public AcceptTargetContext acceptTarget() {
			return getRuleContext(AcceptTargetContext.class,0);
		}
		public CtTargetContext ctTarget() {
			return getRuleContext(CtTargetContext.class,0);
		}
		public NotrackTargetContext notrackTarget() {
			return getRuleContext(NotrackTargetContext.class,0);
		}
		public JumpyTargetContext jumpyTarget() {
			return getRuleContext(JumpyTargetContext.class,0);
		}
		public ReturnTargetContext returnTarget() {
			return getRuleContext(ReturnTargetContext.class,0);
		}
		public RedirectTargetContext redirectTarget() {
			return getRuleContext(RedirectTargetContext.class,0);
		}
		public DnatTargetContext dnatTarget() {
			return getRuleContext(DnatTargetContext.class,0);
		}
		public MarkTargetContext markTarget() {
			return getRuleContext(MarkTargetContext.class,0);
		}
		public SetTargetContext setTarget() {
			return getRuleContext(SetTargetContext.class,0);
		}
		public TargetNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_targetName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).enterTargetName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).exitTargetName(this);
		}
	}

	public final TargetNameContext targetName() throws RecognitionException {
		TargetNameContext _localctx = new TargetNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_targetName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			switch (_input.LA(1)) {
			case T__92:
				{
				setState(180); acceptTarget();
				}
				break;
			case T__15:
				{
				setState(181); dropTarget();
				}
				break;
			case T__36:
				{
				setState(182); returnTarget();
				}
				break;
			case T__84:
				{
				setState(183); checksumTarget();
				}
				break;
			case T__21:
				{
				setState(184); connmarkTarget();
				}
				break;
			case T__34:
				{
				setState(185); ctTarget();
				}
				break;
			case T__66:
				{
				setState(186); dnatTarget();
				}
				break;
			case T__81:
				{
				setState(187); markTarget();
				}
				break;
			case T__55:
				{
				setState(188); notrackTarget();
				}
				break;
			case T__68:
				{
				setState(189); redirectTarget();
				}
				break;
			case T__63:
				{
				setState(190); rejectTarget();
				}
				break;
			case T__52:
				{
				setState(191); setTarget();
				}
				break;
			case T__8:
				{
				setState(192); snatTarget();
				}
				break;
			case NAME:
				{
				setState(193); jumpyTarget();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JumpyTargetContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(IptablesParser.NAME, 0); }
		public JumpyTargetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jumpyTarget; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).enterJumpyTarget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).exitJumpyTarget(this);
		}
	}

	public final JumpyTargetContext jumpyTarget() throws RecognitionException {
		JumpyTargetContext _localctx = new JumpyTargetContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_jumpyTarget);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196); match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AcceptTargetContext extends ParserRuleContext {
		public AcceptTargetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_acceptTarget; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).enterAcceptTarget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).exitAcceptTarget(this);
		}
	}

	public final AcceptTargetContext acceptTarget() throws RecognitionException {
		AcceptTargetContext _localctx = new AcceptTargetContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_acceptTarget);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198); match(T__92);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DropTargetContext extends ParserRuleContext {
		public DropTargetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dropTarget; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).enterDropTarget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).exitDropTarget(this);
		}
	}

	public final DropTargetContext dropTarget() throws RecognitionException {
		DropTargetContext _localctx = new DropTargetContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_dropTarget);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200); match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnTargetContext extends ParserRuleContext {
		public ReturnTargetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnTarget; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).enterReturnTarget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).exitReturnTarget(this);
		}
	}

	public final ReturnTargetContext returnTarget() throws RecognitionException {
		ReturnTargetContext _localctx = new ReturnTargetContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_returnTarget);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202); match(T__36);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChecksumTargetContext extends ParserRuleContext {
		public ChecksumTargetOptsContext checksumTargetOpts() {
			return getRuleContext(ChecksumTargetOptsContext.class,0);
		}
		public ChecksumTargetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_checksumTarget; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).enterChecksumTarget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).exitChecksumTarget(this);
		}
	}

	public final ChecksumTargetContext checksumTarget() throws RecognitionException {
		ChecksumTargetContext _localctx = new ChecksumTargetContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_checksumTarget);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204); match(T__84);
			setState(205); checksumTargetOpts();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChecksumTargetOptsContext extends ParserRuleContext {
		public ChecksumTargetOptsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_checksumTargetOpts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).enterChecksumTargetOpts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IptablesListener ) ((IptablesListener)listener).exitChecksumTargetOpts(this);
		}
	}

	public final ChecksumTargetOptsContext checksumTargetOpts() throws RecognitionException {
		ChecksumTargetOptsContext _localctx = new ChecksumTargetOptsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_checksumTargetOpts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(208);
			_la = _input.LA(1);
			if (_la==T__31) {
				{
				setState(207); match(T__31);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConnmarkTargetContext extends ParserRuleContext {
		public ConnmarkTargetOptsContext connmarkTargetOpts(int i) {
			return getRuleContext(ConnmarkTargetOptsContext.class,i);
		}
		public List<ConnmarkTargetOptsContext> connmarkTargetOpts() {
			return getRuleContexts(ConnmarkTargetOptsContext.class);
		}
		public ConnmarkTargetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_connmarkTarget; }
		@Override
